<resources>
    <string name="app_name">IluminaTI</string>
    <string name="facebook_app_id">1234</string>

    <string name="btnCheckin">Check-in</string>
    <string name="btnCronograma">Cronograma</string>
    <string name="btnCheckinQr">Qr Code</string>
    <string name="btnCheckinFace">Facebook</string>
    <string name="btnJogar">Jogar</string>
    <string name="btnFeedback">Feedback</string>
    <string name="btnCompartilhar">Compartilhar</string>
    <string name="btnEnviar">Enviar</string>
    <string name="btnIniciar">Jogar</string>
    <string name="btnEntrar">Entrar</string>
    <string name="btnResponder">Responder</string>
    <string name="btnRanking">Ranking</string>

    <string name="tvPerguntas">Perguntas e Respostas</string>

    <string name="campoComentario">Comentário</string>
    <string name="campoServidor">Ip do Servidor</string>
    <string name="campoMatricula">Matricula</string>
    <string name="campoSenha">Senha</string>
</resources>
