<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_evento"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ygor.iluminati.activity.EventoActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnJogar"
        android:text="@string/btnJogar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnRanking"
        android:text="@string/btnRanking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnFeedback"
        android:text="@string/btnFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnCompartilhar"
        android:text="@string/btnCompartilhar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
